samples/_failures_safe/1761529129_e0dad7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_738d0228.c: In function ‘main’:
./samples/SAFE/__tmp_738d0228.c:164:9: error: expected expression at end of input
  164 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_738d0228.c:164:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_738d0228.c:164:9: error: expected declaration or statement at end of input
